# komodo-wallet-mobile

./: .editorconfig  .fvmrc  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  README.md  analysis_options.yaml  coins_ci.json  execute_integration.sh  fetch_coin_assets.py  fetch_coins.ps1  fetch_coins.sh  mason-lock.json  mason.yaml  pubspec.yaml  sync_arb_files.dart
.devcontainer/: android-dev.dockerfile  dev-setup.sh  devcontainer.json
.docker/: android-apk-build.dockerfile  android-dev.dockerfile  android-sdk.dockerfile  build_apk_release.sh  build_config.json  dev-setup.sh  docker-compose.yml  kdf-android-build.dockerfile  requirements.txt  update_api.dart  update_api.py
.mason/: bricks.json
android/: build.gradle  gradle.properties  key.properties
android/app/src/main/cpp/: CMakeLists.txt  mm2_native.cpp
assets/: 0.5.6-coins.json  coins.json  coins_activate_default.json  coins_ci.json  coins_config.json  coins_config_ssl.json  coins_config_tcp.json  coins_init_mm2.json  electrum_servers.json  generated.json  protocol_names.json
integration_test/: README.md
ios/: Podfile
lib/: generated_plugin_registrant.dart  localizations.dart  main.dart
linux/: CMakeLists.txt  my_application.cc
test/: api_providers_test.dart  coin_ticker_test.dart  receive_orders.dart  receive_orders_test.dart  utility_test.dart  widget_test.dart
test_driver/: 1-create-wallet.dart  1-create-wallet_test.dart  2-restore-wallet_test.dart  3-portfolio-and-settings.dart  3-portfolio-and-settings_test.dart  4-markets-and-feed_test.dart  5-send-receive.dart  6-swaps_test.dart  (+9 more)
(+809 files in other folders)
